exports[`ProgressBar should generate a proper percentDone style 1`] = `
Object {
  "currencyText": Object {
    "color": "light",
  },
  "progress": Object {
    "backgroundColor": "white",
    "height": "100%",
    "width": "25%",
  },
  "progressBackground": Object {
    "backgroundColor": "#2a4930",
    "height": "6px",
  },
  "wrapper": Object {
    "color": "#fff",
  },
}
`;

exports[`ProgressBar should generate a proper percentDone style 2`] = `
Object {
  "currencyText": Object {
    "color": "dark",
  },
  "progress": Object {
    "backgroundColor": "#6bac43",
    "height": "100%",
    "width": "20%",
  },
  "progressBackground": Object {
    "backgroundColor": "#dddddd",
    "height": "6px",
  },
  "wrapper": Object {
    "color": "#303030",
  },
}
`;

exports[`ProgressBar should render with minimal props 1`] = `
<ProgressBar>
  <div
    style={
      Object {
        "color": "#fff",
      }
    }>
    <div
      className="floating floating--left one-half display-inline-block">
      <h5
        className="floating__item display-inline-block"
        data-spec="title" />
    </div>
    <Currency
      baseHeadingSize="4"
      className="floating floating--right one-half display-inline-block text-right"
      roundCurrency={true}
      theme="light">
      <div
        className="floating text-light-primary floating floating--right one-half display-inline-block text-right">
        <h6
          className="floating__item flush"
          style={
            Object {
              "paddingRight": "5px",
            }
          }>
          $
        </h6>
        <h4
          className="floating__item flush">
          NaN
        </h4>
      </div>
    </Currency>
    <div
      className="one-whole"
      style={
        Object {
          "backgroundColor": "#2a4930",
          "height": "6px",
        }
      }>
      <div
        style={
          Object {
            "backgroundColor": "white",
            "height": "100%",
            "width": "0%",
          }
        } />
    </div>
  </div>
</ProgressBar>
`;
